# jenkins-python

./: .gitreview  ChangeLog  README.rst  junit-py27.xml  setup.cfg  setup.py  tox.ini
.tox/py27/: .tox-config1  pip-selfcheck.json
.tox/py27/local/: bin  include  lib  log
app/: Numbers.py
jenkins_python.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
jenkinspy/: Numbers.py
tests/: test_numbers.py
