[metadata]
name = jenkins-python
summary = test setup
description-file =
    README.rst
author = Max Meldrum
author-email = max@meldrum.se
classifier =
    Environment :: Jenkins Python
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
